read csv, backend methods for pushing plants to db, backend user methods for get and add plants

--- a/dotnet/Capstone/Capstone.csproj
+++ b/dotnet/Capstone/Capstone.csproj
@@ -11,4 +11,13 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="plantInfo-clean.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="plantInfo-raw.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
